objects/Hardware_Asset__c.object
<CustomObject>
    <description>Asset types that can be associated with a sales rep</description>
    <fields>
        <fullName>Hardware_Asset_Name_must_be_Unique__c</fullName>
        <label>Hardware Asset Name must be Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SPX_Product_CreateDate__c</fullName>
        <label>SPX Product CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_Product_ID__c</fullName>
        <label>SPX Product ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AC Adapter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD-ROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floppy Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebook Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notebook PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pocket PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Pad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USB Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Codec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>webcam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Card</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Hardware Asset</label>
    <listViews>
        <fullName>AllHardwareAssets</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All - Hardware Assets</label>
    </listViews>
    <nameField>
        <label>Hardware Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hardware Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>